log/build_2023-04-08_01-42-15/mecanum_odometry/stderr.log
  File "/home/ohj/mecanum-ros2/install/mecanum_odometry/lib/python3.8/site-packages/mecanum_odometry/odom_publisher.py", line 46
    self.diff_joint_positions_[0] = self.joint_msg.position[0] - self.joint_msg.position[]
                                                                                         ^
SyntaxError: invalid syntax

